--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="calender-container">
 
             <div class="calender-header">
-                <h1>August 2025</h1>
+                <h1 id="month-year">August 2025</h1>
                 <div class="month-selector">
                     <i class="fa fa-hand-o-left" id="prev-month"></i>
 
@@ -36,52 +36,7 @@
                     </ul>
                 </div>
 
-                <div class="dates">
-                    <ul>
-                        <li class="inactive">27</li>
-                        <li class="inactive">28</li>
-                        <li class="inactive">29</li>
-                        <li class="inactive">30</li>
-                        <li class="inactive">31</li>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-                        <li>10</li>
-                        <li>11</li>
-                        <li>12</li>
-                        <li>13</li>
-                        <li>14</li>
-                        <li>15</li>
-                        <li>16</li>
-                        <li>17</li>
-                        <li>18</li>
-                        <li>19</li>
-                        <li>20</li>
-                        <li>21</li>
-                        <li>22</li>
-                        <li>23</li>
-                        <li>24</li>
-                        <li>25</li>
-                        <li id="active">26</li>
-                        <li>27</li>
-                        <li>28</li>
-                        <li>29</li>
-                        <li>30</li>
-                        <li class="inactive">1</li>
-                        <li class="inactive">2</li>
-                        <li class="inactive">3</li>
-                        <li class="inactive">4</li>
-                        <li class="inactive">5</li>
-                        <li class="inactive">6</li>
-                        <li class="inactive">7</li>
-                    </ul>
-                </div>
+                <div class="dates"></div>
             </div>
 
         </div>
@@ -148,6 +103,7 @@
         </aside>
 
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
